feat(swagger): externaliza descricoes para i18n
